--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "nodemon": "^3.1.11",
     "socket.io": "^4.8.1",
     "systeminformation": "^5.27.11"
   }
