--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,13 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "nodemon": "^3.1.11",
+    "pg": "^8.16.3",
     "socket.io": "^4.8.1",
     "systeminformation": "^5.27.11"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1",
+    "@types/pg": "^8.15.6",
+    "typescript": "^5.9.3"
   }
 }
