--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,18 +1,17 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "commonjs",
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-     "allowJs": true,
+    "allowJs": true,
     "types": ["node"],
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true
   },
-  "include": ["server.js", "src/**/*"],
+  "include": ["server.ts", "src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
