--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "copy-to-clipboard": "^3.3.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
